# dstu4145-rust-cli-example

./: Cargo.toml  Readme.md
src/: cli_args.rs  error.rs  lib.rs  main.rs  utils.rs
