[package]
name = "dstu4145-presentation-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
clap = { version = "4.5.19", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.64"
num-traits = "0.2"
num-bigint = "0.4.6"
rand_chacha = "0.3.1"
sha3 = "0.10.8"
signature = { version = "2.2.0", features = ["rand_core", "digest", "std"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = { version = "0.1.40" }
gost94 = "0.10.4"
#dstu4145-rust = {git = "https://github.com/ikripaka/dstu4145-rust/"}
#poly_algebra = { git = "https://github.com/ikripaka/dstu4145-rust/"}
#rust-ec = { git = "https://github.com/ikripaka/dstu4145-rust/"}
dstu4145-rust = {path = "../dstu4145-rust/dstu4145-rust"}
poly_algebra = { path = "../dstu4145-rust/poly_algebra"}
rust-ec = { path = "../dstu4145-rust/rust-ec"}